# AmigaWorld-Raytracer-Brian-Wagner

./: .gitignore  Amiga_World_Tech_Journal_Vol_01-03.adf  CMakeLists.txt  CMakePresets.json  CompareFiles.cmake  Doxyfile  Tracer.lzh  TracerFFP.doc  View.lzh  free.c  free.h  image.c  image.h  load.c  load.h  math.c  math.h  platformstub.c  platformstub.h  pyrs  pyrsopts  pyrsopts_end  pyrsopts_gingham  pyrsopts_start  readme  tracer  tracer.c  tracer.h  tracerFFP  types.h  vcpkg-configuration.json  vcpkg.json  write.c  write.h  xen.cfg
